ignore bin folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+bin/
 
 # Created by https://www.toptal.com/developers/gitignore/api/git,go,jetbrains+all,macos,linux,visualstudiocode
 # Edit at https://www.toptal.com/developers/gitignore?templates=git,go,jetbrains+all,macos,linux,visualstudiocode
